@@ -5,6 +5,8 @@ Changes for Perl programming language extension Module-Install
       (ISHIGAKI)
     - Resolved #57335: Re: Problem with Module::Install + Fix (by Paul Makepeace)
       (ISHIGAKI)
+    - Added "add_metadata" to add extra (experimental) metadata to META.yml
+      (requested by Florian Ragwitz) (ISHIGAKI)
 
 0.97 Mon 10 May 2010
 	- Added missing LWP dependency, starting with 2 year old version (ADAMK)
